# unicity-node

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh
test/: CMakeLists.txt  README.md  build_and_run.sh
test/addr-simulation/: addr_test_network.hpp  addr_test_node.hpp
test/addr-simulation/scenarios/: attempt_tracking_tests.cpp  bucketization_gap_tests.cpp  eclipse_attack_tests.cpp  eviction_attack_tests.cpp  feeler_tests.cpp  fingerprinting_tests.cpp  ipv6_netgroup_tests.cpp  longrun_health_tests.cpp  memory_limits_tests.cpp  mixed_network_tests.cpp  multi_source_tests.cpp  network_scale_tests.cpp  propagation_tests.cpp  sybil_attack_tests.cpp  time_penalty_tests.cpp  timestamp_attack_tests.cpp  topology_tests.cpp
test/benchmark/: benchmark_main.cpp
test/benchmark/chain/: header_validation_bench.cpp  randomx_bench.cpp
test/benchmark/network/: addr_manager_bench.cpp
test/common/: catch_amalgamated.cpp  mock_bft_client.hpp  mock_trust_base_manager.hpp  test_chainstate_manager.hpp  test_trust_base_data.hpp  test_util.hpp
test/eviction-simulation/: eviction_test_network.hpp  eviction_test_node.hpp
test/eviction-simulation/scenarios/: advanced_eviction_tests.cpp  block_relay_rotation_tests.cpp  eclipse_resistance_tests.cpp  eviction_protection_tests.cpp  netgroup_diversity_tests.cpp  network_scale_tests.cpp  slot_stress_tests.cpp
test/functional/: README.md  adversarial_batch1_wire.py  adversarial_batch2_wire.py  adversarial_framing_wire.py  adversarial_handshake_wire.py  adversarial_headers_wire.py  adversarial_oversized_wire.py  adversarial_rate_limit_wire.py  adversarial_slow_loris_wire.py  adversarial_spam_non_continuous_wire.py  adversarial_validation_wire.py  consensus_asert_difficulty.py  consensus_asert_difficulty_testnet.py  consensus_difficulty_regtest.py  consensus_timestamp_bounds.py  debug_reorg_3k_4k.py  export_test_headers.py  feature_concurrent_peer_validation.py  feature_concurrent_reorg_cascade.py  feature_error_handling.py  feature_ibd_restart_resume.py  feature_large_concurrent_reorg_cascade.py  feature_massive_reorg.py  feature_multi_reorg_cascade.py  feature_multinode_sync.py  feature_suspicious_reorg.py  generate_chain_100k.py  generate_reorg_chains.py  miner_integration.py  p2p_addr_relay.py  p2p_batching.py  p2p_disconnect_ban.py  p2p_eclipse_resistance.py  p2p_ibd_sync.py  p2p_initial_headers_sync.py  p2p_invalid_messages.py  p2p_leak.py  p2p_misbehavior_scores.py  p2p_reorg.py  p2p_self_advertisement.py  (+11 more)
test/functional/docker/: README.md
test/functional/docker_anchor/: docker-compose.yml  run_anchor_tests.py
test/functional/docker_ban/: docker-compose.yml  run_ban_tests.py
test/functional/docker_discovery/: README.md  docker-compose.yml  run_discovery_tests.py
test/functional/docker_eclipse/: Dockerfile  README.md  docker-compose.yml  run_block_relay_tests.py  run_eclipse_tests.py
test/functional/docker_eviction/: docker-compose.yml  run_eviction_tests.py
test/functional/docker_header_sync/: docker-compose.yml  run_header_sync_tests.py
test/functional/docker_partition/: README.md  docker-compose.yml  run_partition_tests.py
test/functional/docker_sybil/: README.md  docker-compose.yml  run_sybil_tests.py  test_addr_poison.py  test_header_conflict.py  test_partition_flood.py  test_selective_relay.py
test/functional/test_chains/: README.md
test/functional/test_framework/: test_node.py  util.py
test/integration-chain/: chain_e2e_tests.cpp  invalidateblock_chain_tests.cpp  orphan_dos_tests.cpp  orphan_edge_case_tests.cpp  orphan_integration_tests.cpp  orphan_thread_safety_tests.cpp  orphan_time_eviction_tests.cpp  reorg_multi_node_tests.cpp  stress_threading_tests.cpp
test/integration-network/: addr_manager_tests2.cpp  anchors_integration_tests.cpp  banman_adversarial_tests.cpp  bitcoin_core_parity_tests.cpp  conditions_tests.cpp  connection_flooding_tests.cpp  edge_case_tests.cpp  feeler_anchor_tests.cpp  headers_sync_tests.cpp  ibd_resume_tests.cpp  idle_timeout_tests.cpp  invalidateblock_tests.cpp  malformed_message_tests.cpp  message_dispatcher_tests.cpp  multi_peer_sync_tests.cpp  nat_integration_tests.cpp  nat_manager_tests.cpp  network_header_sync_edge_tests.cpp  network_header_sync_tests.cpp  outbound_diversity_tests.cpp  penalty_tests.cpp  permission_tests.cpp  post_ibd_inv_sync_tests.cpp  rate_limiter_integration_tests.cpp  real_transport_dos_tests.cpp  real_transport_tests.cpp  rpc_integration_tests.cpp  self_advertisement_tests.cpp  startup_shutdown_tests.cpp  sync_ibd_tests.cpp  tcp_fragmentation_tests.cpp  test_orchestrator.hpp
test/integration-network/addr/: addr_manager_netgroup_tests.cpp  addr_relay_coordinated_attack_tests.cpp  addr_relay_dedup_tests.cpp  addr_relay_prediction_tests.cpp  addr_relay_timing_tests.cpp  address_promotion_e2e_tests.cpp  getaddr_cache_adversarial_tests.cpp  getaddr_multi_node_tests.cpp  getaddr_router_tests.cpp  self_advertisement_integration_tests.cpp  topology_privacy_tests.cpp
test/integration-network/block_announcement/: basic_tests.cpp  block_relay_comprehensive_tests.cpp  block_relay_policy_tests.cpp  core_aligned_smoke_tests.cpp  extra_block_relay_rotation_tests.cpp  ibd_relay_suppression_tests.cpp  integration_tests.cpp
test/integration-network/dos/: addr_echo_suppression_tests.cpp  addr_eviction_performance_tests.cpp  addr_rate_limiting_tests.cpp  dos_portfolio_tests.cpp  (+18 more)
test/network-integration/: addr_manager_tests2.cpp  anchors_integration_tests.cpp  banman_adversarial_tests.cpp  bitcoin_core_parity_tests.cpp  connection_flooding_tests.cpp  feeler_anchor_tests.cpp  idle_timeout_tests.cpp  nat_manager_mock_tests.cpp  nat_manager_tests.cpp  network_header_sync_tests.cpp  outbound_diversity_tests.cpp  real_transport_dos_tests.cpp  real_transport_tests.cpp  rpc_integration_tests.cpp  scale_debug_test.cpp  startup_shutdown_tests.cpp  sync_ibd_tests.cpp  test_orchestrator.hpp
test/wire/: README.md  node_simulator.cpp
(+311 files in other folders)
